http2-it/src/main/fabric8/hello-service.yml
apiVersion: v1
kind: Service
metadata:
  name: hello
spec:
  ports:
  - name: hello
    port: 80
    protocol: TCP
    targetPort: 8082
  selector:
    project: ${project.artifactId}
