http2-it/src/main/fabric8/http-service.yml
apiVersion: v1
kind: Service
metadata:
  name:  ${project.artifactId}
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app:  ${project.artifactId}
