http2-it/src/main/fabric8/aloha-route.yml
apiVersion: v1
kind: Route
metadata:
  name: aloha
spec:
  port:
    targetPort: 8081
  to:
    kind: Service
    name: aloha
  tls:
    termination: passthrough
