http2-it/src/main/fabric8/hello-route.yml
apiVersion: v1
kind: Route
metadata:
  name: hello
spec:
  port:
    targetPort: 8082
  to:
    kind: Service
    name: hello
  tls:
    termination: passthrough
